--- a/Part2/files/Q4_time_series_analysis.ipynb
+++ b/Part2/files/Q4_time_series_analysis.ipynb
@@ -2,98 +2,12 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Vaetarium/IDS25WS_Assignment/blob/main/Part2/files/Q4_time_series_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "b179e602",
       "metadata": {
         "id": "b179e602"
       },
       "source": [
         "# Time Series Analysis"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/Vaetarium/IDS25WS_Assignment.git\n",
-        "%cd IDS25WS_Assignment/Part2/files"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZEIUvvGtDF6v",
-        "outputId": "beaa2927-b200-4292-f9b2-1ade6a936d55"
-      },
-      "id": "ZEIUvvGtDF6v",
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'IDS25WS_Assignment'...\n",
-            "remote: Enumerating objects: 94, done.\u001b[K\n",
-            "remote: Counting objects: 100% (94/94), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (80/80), done.\u001b[K\n",
-            "remote: Total 94 (delta 23), reused 62 (delta 10), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (94/94), 13.79 MiB | 10.46 MiB/s, done.\n",
-            "Resolving deltas: 100% (23/23), done.\n",
-            "/content/IDS25WS_Assignment/Part2/files\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "! pip install sktime"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Uds0ZV9IM6Nz",
-        "outputId": "ba05f036-a90d-4637-ff1a-7fee24becaf3"
-      },
-      "id": "Uds0ZV9IM6Nz",
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting sktime\n",
-            "  Downloading sktime-0.40.1-py3-none-any.whl.metadata (33 kB)\n",
-            "Requirement already satisfied: joblib<1.6,>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from sktime) (1.5.3)\n",
-            "Requirement already satisfied: numpy<2.4,>=1.21 in /usr/local/lib/python3.12/dist-packages (from sktime) (2.0.2)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.12/dist-packages (from sktime) (25.0)\n",
-            "Requirement already satisfied: pandas<2.4.0,>=1.1 in /usr/local/lib/python3.12/dist-packages (from sktime) (2.2.2)\n",
-            "Collecting scikit-base<0.14.0,>=0.6.1 (from sktime)\n",
-            "  Downloading scikit_base-0.13.0-py3-none-any.whl.metadata (8.8 kB)\n",
-            "Requirement already satisfied: scikit-learn<1.8.0,>=0.24 in /usr/local/lib/python3.12/dist-packages (from sktime) (1.6.1)\n",
-            "Requirement already satisfied: scipy<2.0.0,>=1.2 in /usr/local/lib/python3.12/dist-packages (from sktime) (1.16.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas<2.4.0,>=1.1->sktime) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas<2.4.0,>=1.1->sktime) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas<2.4.0,>=1.1->sktime) (2025.3)\n",
-            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn<1.8.0,>=0.24->sktime) (3.6.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas<2.4.0,>=1.1->sktime) (1.17.0)\n",
-            "Downloading sktime-0.40.1-py3-none-any.whl (36.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m36.3/36.3 MB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading scikit_base-0.13.0-py3-none-any.whl (151 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m151.5/151.5 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: scikit-base, sktime\n",
-            "Successfully installed scikit-base-0.13.0 sktime-0.40.1\n"
-          ]
-        }
       ]
     },
     {
@@ -142,7 +56,7 @@
           "height": 226
         },
         "id": "d1349124",
-        "outputId": "20194f08-979e-4a67-ab70-3e6fef2b8a71"
+        "outputId": "3c090a43-3ffb-44ab-e507-218b3d0f8ee6"
       },
       "outputs": [
         {
@@ -172,7 +86,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3f61c6d0-c8a9-4bf4-bf29-152335305112\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c9167e07-6643-4d6a-ad35-13ba70d0a77e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -317,7 +231,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3f61c6d0-c8a9-4bf4-bf29-152335305112')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c9167e07-6643-4d6a-ad35-13ba70d0a77e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -369,12 +283,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3f61c6d0-c8a9-4bf4-bf29-152335305112 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c9167e07-6643-4d6a-ad35-13ba70d0a77e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3f61c6d0-c8a9-4bf4-bf29-152335305112');\n",
+              "        const element = document.querySelector('#df-c9167e07-6643-4d6a-ad35-13ba70d0a77e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -429,7 +343,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BnGVSMAjDtFk",
-        "outputId": "3035c562-de98-4113-ecce-d9276e089108"
+        "outputId": "84092bbb-7738-4cfe-b821-a0b9f435c0ca"
       },
       "id": "BnGVSMAjDtFk",
       "execution_count": 5,
@@ -462,7 +376,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E39L1uwzDvO-",
-        "outputId": "bddd11c8-daac-482e-9aa9-7eda8055a130"
+        "outputId": "4b058118-f52d-4ae8-c71c-485f31c30fbc"
       },
       "id": "E39L1uwzDvO-",
       "execution_count": 6,
@@ -497,7 +411,7 @@
           "height": 262
         },
         "id": "560e1313",
-        "outputId": "ab72ee19-2e0e-4842-a47a-d926f6be3700"
+        "outputId": "c9039636-c5b9-4979-85bd-d2b6b816e495"
       },
       "outputs": [
         {
@@ -552,7 +466,7 @@
           "height": 232
         },
         "id": "387586ff",
-        "outputId": "52d20d16-61ac-4b43-83e7-2617c508911f"
+        "outputId": "871072eb-db00-4a1b-97bf-fe41471b5472"
       },
       "outputs": [
         {
@@ -615,7 +529,7 @@
           "height": 364
         },
         "id": "a609f6ac",
-        "outputId": "15e8480b-3acc-4d14-932d-e3ade8fb81db"
+        "outputId": "6b17a513-1be7-49c8-ce32-7234c65c03ad"
       },
       "outputs": [
         {
@@ -682,7 +596,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e32198ef",
-        "outputId": "87dfe14d-eaa8-45c0-8e77-c33878a9ee23"
+        "outputId": "c8457736-e63a-40b3-e85c-47bed7aa4d6c"
       },
       "outputs": [
         {
@@ -743,7 +657,7 @@
           "height": 451
         },
         "id": "382991b8",
-        "outputId": "03b5ea78-27a4-47e0-aab0-30f127ce9dd3"
+        "outputId": "64e57d0e-9167-49ca-98ee-c033aa2eecef"
       },
       "outputs": [
         {
@@ -821,7 +735,7 @@
           "height": 407
         },
         "id": "b988abd2",
-        "outputId": "216a3ad2-6d09-4285-e096-39082230a1f2"
+        "outputId": "f8d1daad-8848-4b3c-d04b-e617c8ae2f20"
       },
       "outputs": [
         {
@@ -981,7 +895,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3_aGRoplMqLQ",
-        "outputId": "f6df8b3c-0c0b-45d1-9e94-c1d57c2aa80d"
+        "outputId": "99bcd385-0eb1-4200-8b18-a87a7455ab03"
       },
       "id": "3_aGRoplMqLQ",
       "execution_count": 19,
@@ -1024,10 +938,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oY2TQjw8MyD7",
-        "outputId": "51250943-64ab-444c-8dfd-41f4e0cde9c9"
+        "outputId": "e9801ae3-609f-41d3-a822-d9733c1b2abe"
       },
       "id": "oY2TQjw8MyD7",
-      "execution_count": 22,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +977,7 @@
           "height": 232
         },
         "id": "62b36221",
-        "outputId": "977b4175-307d-40a4-dcb5-ddc30a0799a1"
+        "outputId": "bb4c9e11-b9d7-4dbc-c722-b51ec0f50b17"
       },
       "outputs": [
         {
@@ -1136,8 +1050,7 @@
       "version": "3.12.9"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
