--- a/Part2/files/Q5_big_data.ipynb
+++ b/Part2/files/Q5_big_data.ipynb
@@ -2,80 +2,6 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/Vaetarium/IDS25WS_Assignment.git\n",
-        "%cd IDS25WS_Assignment/Part2/files"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "id": "qyV8miC0yGLm",
-        "outputId": "426aaf95-55b9-4e90-9cc1-c8ca99099934"
-      },
-      "id": "qyV8miC0yGLm",
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: destination path 'IDS25WS_Assignment' already exists and is not an empty directory.\n",
-            "/content/IDS25WS_Assignment/Part2/files\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install pm4py"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "id": "MmULAf1rqOrH",
-        "outputId": "d9330f64-7bab-4bda-d028-1d019db31f3d"
-      },
-      "id": "MmULAf1rqOrH",
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: pm4py in /usr/local/lib/python3.12/dist-packages (2.7.19.5)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from pm4py) (2.0.2)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (from pm4py) (2.2.2)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.12/dist-packages (from pm4py) (3.6.1)\n",
-            "Requirement already satisfied: graphviz in /usr/local/lib/python3.12/dist-packages (from pm4py) (0.21)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.12/dist-packages (from pm4py) (1.16.3)\n",
-            "Requirement already satisfied: lxml in /usr/local/lib/python3.12/dist-packages (from pm4py) (6.0.2)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (from pm4py) (3.10.0)\n",
-            "Requirement already satisfied: pytz in /usr/local/lib/python3.12/dist-packages (from pm4py) (2025.2)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from pm4py) (4.67.1)\n",
-            "Requirement already satisfied: wheel in /usr/local/lib/python3.12/dist-packages (from pm4py) (0.45.1)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.12/dist-packages (from pm4py) (75.2.0)\n",
-            "Requirement already satisfied: cvxopt in /usr/local/lib/python3.12/dist-packages (from pm4py) (1.3.2)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->pm4py) (1.3.3)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.12/dist-packages (from matplotlib->pm4py) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib->pm4py) (4.61.1)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->pm4py) (1.4.9)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib->pm4py) (25.0)\n",
-            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.12/dist-packages (from matplotlib->pm4py) (11.3.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->pm4py) (3.3.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.12/dist-packages (from matplotlib->pm4py) (2.9.0.post0)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas->pm4py) (2025.3)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib->pm4py) (1.17.0)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 3,
       "id": "f89de87e-ff79-4c29-9c25-2e45d65c4d7c",
       "metadata": {
@@ -114,11 +40,10 @@
       "id": "28d0bc9f-b0b5-47e7-a80c-6e5a5459920c",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "28d0bc9f-b0b5-47e7-a80c-6e5a5459920c",
-        "outputId": "9bd51c3f-1b6d-4ce7-f66a-8cc3302c6f33"
+        "outputId": "2041018e-9e6e-4550-ff9c-68db51ca36c8"
       },
       "outputs": [
         {
@@ -305,43 +230,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "rdd"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "id": "FdtphfWywaCM",
-        "outputId": "9f7ea612-9c3b-4ff2-e43f-6ad2d1390e9c"
-      },
-      "id": "FdtphfWywaCM",
       "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "big-data/event_log.csv.gz MapPartitionsRDD[8] at textFile at NativeMethodAccessorImpl.java:0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
       "id": "451773bc",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "451773bc",
-        "outputId": "16bc5cb3-24c5-4b67-a67e-b9c734be6f96"
+        "outputId": "4f9643c8-1b6a-493c-f90d-22b156717780"
       },
       "outputs": [
         {
@@ -384,10 +280,10 @@
           "height": 329
         },
         "id": "C7F37crBozG9",
-        "outputId": "c19a42f3-0ca2-4866-d1ae-a9e289f74e46"
+        "outputId": "2b872981-5076-407a-fbb5-c716d3c97334"
       },
       "id": "C7F37crBozG9",
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -423,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "id": "f746a0b4",
       "metadata": {
         "id": "f746a0b4"
@@ -450,10 +346,10 @@
           "height": 35
         },
         "id": "HNFeU72JvgXU",
-        "outputId": "0718809b-e7d2-43c8-b198-d566802f8392"
+        "outputId": "16f04e33-3c42-48cc-fd57-8d4dd724c5c7"
       },
       "id": "HNFeU72JvgXU",
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +362,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 11
         }
       ]
     },
@@ -481,10 +377,10 @@
           "height": 112
         },
         "id": "kcMBU0-4viAe",
-        "outputId": "ca6f747d-9be9-4abf-b9f9-3ebaf16219ea"
+        "outputId": "1c5f66da-56d7-4aff-a287-1e6d6355ae19"
       },
       "id": "kcMBU0-4viAe",
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -510,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "id": "1a35437a",
       "metadata": {
         "id": "1a35437a"
@@ -552,14 +448,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "FnaJshHexkt8",
-        "outputId": "aa5790c0-f7ff-4105-8182-2624e6aa91ca"
+        "outputId": "6d6bf052-f935-4163-c394-80f3aac7c002"
       },
       "id": "FnaJshHexkt8",
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +505,7 @@
         "id": "8bIdrr0wy3de"
       },
       "id": "8bIdrr0wy3de",
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": []
     }
   ],
